--- a/src/main/resources/public/home.html
+++ b/src/main/resources/public/home.html
@@ -8,22 +8,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="js/busqueda.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a class="navbar-brand" href="#">DATABASE</a>
-    <form class="form-inline" action="#">
+    <a class="navbar-brand" href="home.html">DATABASE</a>
+    <form id="formulario" name="formulario" class="form-inline">
         <div class="input-group">
-            <select class="custom-select" id="opcion">
-                <option selected>Cinta</option>
-                <option value="1">Programa</option>
+            <select class="custom-select" id="opcion" name="opcion">
+                <option value="cinta" selected>Cinta</option>
+                <option value="programa">Programa</option>
             </select>
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" id="texto" name="texto" class="form-control" placeholder="Escriba aquí" required>
         </div>
-        <button class="btn btn-success" type="submit">Search</button>
+        <button class="btn btn-success" type="submit" onclick="return hacerBusqueda()">Buscar</button>
     </form>
 </nav>
 <div id="numRegistros"></div>
 <script src="js/registros.js"></script>
+<div id="contenido"></div>
 </body>
 </html>
