HTML y JS finalizados

--- a/src/main/resources/public/home.html
+++ b/src/main/resources/public/home.html
@@ -24,8 +24,11 @@
         <button class="btn btn-success" type="submit" onclick="return hacerBusqueda()">Buscar</button>
     </form>
 </nav>
-<div id="numRegistros"></div>
-<script src="js/registros.js"></script>
-<div id="contenido"></div>
+<div class="container" style="width:100%; margin-left:10%; margin-right:10%;">
+    <div id="numRegistros"></div>
+    <div id="cadenaResultados"></div>
+    <script src="js/registros.js"></script>
+    <span id="contenido" style="display: flex;"></span>
+</div>
 </body>
 </html>
