--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a class="navbar-brand" href="home.html">DATABASE</a>
+    <a class="navbar-brand" href="index.html">DATABASE</a>
     <form id="formulario" name="formulario" class="form-inline">
         <div class="input-group">
             <select class="custom-select" id="opcion" name="opcion">
